# s3-image-gallery

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  website-bucket.cfn.yml
src/: aws.py  build.py  change_storage_class.py  s3.py  s3_create_thumbnail.py
src/html/: index.html
src/template/html/: index.html
