[tool.poetry]
name = "s3-image-gallery"
version = "0.1.0"
description = "Image gallery application hosted in AWS S3"
authors = ["JP White <jpwhite3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pillow-heif = "^0.7.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
boto3 = "^1.18.45"
Pillow = "^9.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
